# langchain-streamlit

./: makefile  pyproject.toml
scripts/: run_app.py
src/: config.py
src/api/: __set_base_path__.py  web.py  web_summary.py  youtube.py
