[tool.poetry]
name = "langcahin-streamlit"
version = "0.1.0"
description = ""
authors = ["MilaisTaso <livreblanche819@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
langchain = "^0.1.11"
openai = "^1.13.3"
streamlit = "^1.32.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
